Fix extra space between words

--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,17 @@
   }
   .accordion .content {
     font-size: 14px;
+    text-align: left;
   }
   .accordion .container.active .content {
-    height: 70px;
+    height: 150px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .accordion .content {
+    font-size: 12px;
+    text-align: left;
   }
 }
 
@@ -466,7 +474,7 @@ small {
 }
 
 .gallery__img {
-  max-width: 100%;
+  width: 100%;
   border-radius: 1rem;
   height: auto;
   -o-object-fit: cover;
