--- a/sass/components/_accordion.scss
+++ b/sass/components/_accordion.scss
@@ -94,8 +94,16 @@
       }
       .accordion .content {
           font-size: 14px;
+          text-align: left;
       }
       .accordion .container.active .content {
-        height: 70px;
+        height: 150px;
+
+      }
+  }
+  @media only screen and (max-width: 300px){
+      .accordion .content {
+          font-size: 12px;
+          text-align: left;
       }
   }
