--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -19,7 +19,7 @@
     justify-content: center;
 }
 .gallery__img {
-    max-width: 100%;
+    width: 100%;
     border-radius: 1rem;
     height: auto;
     object-fit: cover;
